[tool.poetry]
name = "bloc"
version = "0.1.0"
description = ""
authors = ["pen-dev <pelipenkovladislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aioreactive = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
